2021-02-07  Jay Berkenbilt  <ejb@ql.org>

	* Add new functions QUtil::pipe_file and QUtil::file_provider for
	sending the contents of a file through a pipeline as binary data.

2021-02-04  Jay Berkenbilt  <ejb@ql.org>

	* Add new option --pasword-file=file for reading the decryption
	password from a file. file may be "-" to read from standard input.
	Fixes #499.

	* By default, give an error if a user attempts to encrypt a file
	with a 256-bit key, a non-empty user password, and an empty owner
	password. Such files are insecure since they can be opened with no
	password. To allow explicit creation of files like this, pass the
	new --allow-insecure option. Thanks to github user RobK88 for a
	detailed analysis and for reporting this issue. Fixes #501.

2021-02-02  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: if a form XObject lacks a resources dictionary,
	consider any names in that form XObject to be referenced from the
	containing page. This is compliant with older PDF versions. Also
	detect if any form XObjects have any unresolved names and, if so,
	don't remove unreferenced resources from them or from the page
	that contains them. Fixes #494.

2021-01-31  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: properly handle strings if they appear in inline image
	dictionaries while externalizing inline images.

2021-01-30  Jay Berkenbilt  <ejb@ql.org>

	* Add examples/pdf-name-number-tree.cc to illustrate new
	name/number tree API and new array/dictionary iterator API.

2021-01-29  Jay Berkenbilt  <ejb@ql.org>

	* Add wrappers QPDFDictItems and QPDFArrayItems around
	QPDFObjectHandle that provide a C++ iterator API, including C++11
	range-for iteration, over arrays and dictionaries. With this, you
	can do

	for (auto i: QPDFDictItems(oh))
	{
	    // i.first is a string, i.second is a QPDFObjectHandle
	}
	for (auto i: QPDFArrayItems(oh))
	{
	    // i is a QPDFObjectHandle
	}

	* QPDFObjectHandle::is* methods to check type now return false on