@@ -105,3 +105,7 @@ rename file
 create file
 rename over existing
 delete file
+---- timestamp
+D:20210209144925-05'00'
+D:20210210011925+05'30'
+D:20210209191925Z
