@@ -4943,6 +4943,14 @@ print "\n";
         </listitem>
         <listitem>
          <para>
+          Add <function>QUtil::get_current_qpdf_time</function>,
+          <function>QUtil::pdf_time_to_qpdf_time</function>, and
+          <function>QUtil::qpdf_time_to_pdf_time</function> for
+          working with PDF timestamp strings.
+         </para>
+        </listitem>
+        <listitem>
+         <para>
           Add <function>warn</function> to
           <classname>QPDF</classname>'s public API.
          </para>
